--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,18 @@
   "ignorePatterns": ["node_modules/**", "dist/**", "NetscriptDefinitions.d.ts"],
   "rules": {
     "no-constant-condition": ["off"],
-    "@typescript-eslint/no-floating-promises": "error"
+    "@typescript-eslint/no-floating-promises": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "args": "all",
+        "argsIgnorePattern": "^_",
+        "caughtErrors": "all",
+        "caughtErrorsIgnorePattern": "^_",
+        "destructuredArrayIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
+      }
+    ]
   }
 }
